# text-adventure

./: .gitignore  LICENSE  StringFormat.hs  StringUtils.hs  TemplateString.hs  TextAdventure.hs  Visualization.hs  demo.hs  text-adventure.cabal
app/: Main.hs
src/: TextAdventure.hs  Visualization.hs
src/TextAdventure/Internal/: StringUtils.hs  TemplateString.hs  TextUtils.hs
