name:                text-adventure
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dustinrohde/text-adventure#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Rohde
maintainer:          dustin.rohde@gmail.com
copyright:           2016 Dustin Rohde
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TextAdventure
                     , TextAdventure.Internal.TextUtils
                     , TextAdventure.Internal.TemplateString
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , parsec
                     , text
  default-language:    Haskell2010

executable text-adventure-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text-adventure
  default-language:    Haskell2010

test-suite text-adventure-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text-adventure
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dustinrohde/text-adventure
